--- a/src/LarpManager/Views/public/message/messagerie.twig
+++ b/src/LarpManager/Views/public/message/messagerie.twig
@@ -42,6 +42,7 @@
 				</div>
 				<div class="btn-toolbar pull-right" role="toolbar" aria-label="...">
 					<div class="btn-group" role="group" aria-label="...">
+						<a data-toggle="tooltip" data-placement="top" title="Messages envoyés" class="btn btn-default" href="{{ path('message.envoye') }}"><i class="fa fa-send" aria-hidden="true"></i></a>
 						<a data-toggle="tooltip" data-placement="top" title="Messages archivés" class="btn btn-default" href="{{ path('message.archives') }}"><i class="fa fa-archive" aria-hidden="true"></i></a>
 						<a data-toggle="tooltip" data-placement="top" title="Nouveau message" class="btn btn-primary" href="{{ path('message.new') }}"><i class="fa fa-plus" aria-hidden="true"></i></a>
 					</div>
