--- a/src/LarpManager/Views/public/personnage/trombine.twig
+++ b/src/LarpManager/Views/public/personnage/trombine.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Discuter{% endblock title %}
+{% block title %}Trombine{% endblock title %}
 
 {% block content %}
 
