--- a/src/LarpManager/Views/public/rule/detail.twig
+++ b/src/LarpManager/Views/public/rule/detail.twig
@@ -22,7 +22,7 @@
 	<object type="application/pdf" width="100%" height="1200px" >
 		<param name="src" value="{{ path('participant.regle.document',{'participant': participant.id, 'rule' :regle.id}) }}" />
 	 
-		<p>It appears your Web browser is not configured to display PDF files. No worries, just {{ path('participant.regle.document',{'participant': participant.id, 'rule' : regle.id}) }}">click here to download the PDF file.</a></p>
+		<p>It appears your Web browser is not configured to display PDF files. No worries, just <a href="{{ path('participant.regle.document',{'participant': participant.id, 'rule' : regle.id}) }}">click here to download the PDF file.</a></p>
 	</object>
 
 </div>
