Possibilité de créer des utilisateur, ajout d'une page economie, possibilité d'inviter des utilisateurs dans un groupe (pour les chefs de groupe)

--- a/src/LarpManager/Views/admin/user/new.twig
+++ b/src/LarpManager/Views/admin/user/new.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig"  %}
 
-{% block title %}Liste des utilisateurs{% endblock %}
+{% block title %}Création d'un utilisateur{% endblock %}
 
 {% block content %}
 
