Corrections bug de chargement de la carte. Amélioration de son apparence. Ajout des groupes liés à un territoire

--- a/src/LarpManager/Views/admin/gn/participantswithoutgroup.twig
+++ b/src/LarpManager/Views/admin/gn/participantswithoutgroup.twig
@@ -31,7 +31,13 @@
 		<tbody>
 			{% for participant in participants %}
 				<tr>
-					<td>{{ participant.user.etatCivil.nom }} {{ participant.user.etatCivil.prenom }}</td>
+					<td>
+						{% if participant.user.etatCivil %}
+							{{ participant.user.etatCivil.nom }} {{ participant.user.etatCivil.prenom }}
+						{% else %}
+							Ce joueur n'a pas encore rempli son état-civil
+						{% endif %}
+					</td>
 					<td>{{ participant.user.email }}</td>
 					<td>{{ participant.billet }}</td>
 					<td>
