--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -69,6 +69,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
+						<li><a href="{{ path('intrigue.list') }}">Intrigues</a></li>
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
 						<li><a href="{{ path('trombinoscope.perso') }}">Selection</a></li>
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
