--- a/src/LarpManager/Views/admin/religion/update.twig
+++ b/src/LarpManager/Views/admin/religion/update.twig
@@ -4,7 +4,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("religion/fragment/form.twig",{
+				{{ include("admin/religion/fragment/form.twig",{
 					'legend': 'Modification d\'une religion',
 					'action': path('religion.update',{'index': religion.id}),
 					'form' : form}) }}
