--- a/src/LarpManager/Views/admin/intrigue/detail.twig
+++ b/src/LarpManager/Views/admin/intrigue/detail.twig
@@ -26,7 +26,7 @@
 				<div class="white-box">
 					<ul>
 					{% for intrigueHasGroupe in intrigue.intrigueHasGroupes %}
-						<li>{{ intrigueHasGroupe.groupe.nom }}</li>
+						<li><a href="{{ path('groupe.detail', {'index': intrigueHasGroupe.groupe.id}) }}">{{ intrigueHasGroupe.groupe.nom }}</a></li>
 					{% else %}
 						<li>Aucun</li>
 					{% endfor %}
@@ -66,12 +66,13 @@
 				</div>
 			</div>
 			<div class="col-md-6">
+				<h4>Auteur</h4>
+				<p>Cette intrigue a été créé par <strong><a href="{{ path('user.view', {'id': intrigue.user.id}) }}">{{ intrigue.user.username }}</a></strong> le <strong>{{ intrigue.dateCreation|date('Y-m-d H:i:s') }}</strong></p>
+					
 				<h4>Relectures</h4>
-				
-				
 				{% for relecture in intrigue.relectures %}
 					<div class="white-box">
-						<strong>{{ relecture.date|date('Y-m-d H:i:s') }} :</strong> <strong>{{ relecture.user.username }}</strong> a relu l'intrigue. Statut donné : <strong>{{ relecture.statut }}</strong>
+						<strong>{{ relecture.date|date('Y-m-d H:i:s') }} :</strong> <strong><a href="{{ path('user.view', {'id': intrigue.user.id}) }}">{{ relecture.user.username }}</a></strong> a relu l'intrigue. Statut donné : <strong>{{ relecture.statut }}</strong>
 						{{ relecture.remarque|markdown }}
 					</div>
 				{% else %}
