--- a/src/LarpManager/Views/admin/intrigue/list.twig
+++ b/src/LarpManager/Views/admin/intrigue/list.twig
@@ -73,7 +73,7 @@
 					<td>
 						<ul>
 						{% for intrigueHasGroupe in intrigue.intrigueHasGroupes %}
-							<li><a href="">{{ intrigueHasGroupe.groupe.nom }}</a></li> 
+							<li><a href="{{ path('groupe.detail', {'index': intrigueHasGroupe.groupe.id}) }}">{{ intrigueHasGroupe.groupe.nom }}</a></li> 
 						{% else %}
 							<li>Aucun</li>
 						{% endfor %}
