Ajout de la gestion des debriefing. Un post peux avec un titre long de 450 caractères. Début gestion des questions à poser aux joueurs.

--- a/src/LarpManager/Views/admin/background/delete.twig
+++ b/src/LarpManager/Views/admin/background/delete.twig
@@ -1,6 +1,6 @@
 {% extends "layout.twig" %}
 
-{% block title %}Jetons{% endblock title %}
+{% block title %}Backgrounds{% endblock title %}
 
 {% block content %}
 
