--- a/src/LarpManager/Views/admin/econnomie/index.twig
+++ b/src/LarpManager/Views/admin/econnomie/index.twig
@@ -1,12 +1,12 @@
 {% extends "layout.twig" %}
 
-{% block title %}Econnomie{% endblock title %}
+{% block title %}Economie{% endblock title %}
 
 {% block content %}
 
 	<ol class="breadcrumb">
 		<li><a href="{{ path('homepage') }}">Accueil</a></li>
-		<li class="active">Econnomie</li>
+		<li class="active">Economie</li>
 	</ol>
 	
 	<div class="well well-sm">
