--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -70,6 +70,8 @@
 						<li><a href="{{ path('groupe.admin.list') }}">Liste des groupes</a></li>
 						<li><a href="{{ path('groupeSecondaire.admin.list') }}">Liste des groupes secondaires</a></li>
 						<li><a href="{{ path('intrigue.list') }}">Intrigues</a></li>
+						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
+						<li><a href="{{ path('debriefing.list') }}">Debriefings</a></li>
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
 						<li><a href="{{ path('trombinoscope.perso') }}">Selection</a></li>
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
@@ -78,13 +80,12 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('ingredient.admin.list') }}">Ingredients</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
 						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
 						<li><a href="{{ path('monnaie') }}">Monnaie</a></li>
-						<li><a href="{{ path('econnomie') }}">Econnomie</a></li>
+						<li><a href="{{ path('econnomie') }}">Economie</a></li>
 						<li><a href="{{ path('quality') }}">Qualité</a></li>
 						<li><a href="{{ path('personnage.admin.list') }}">Personnages</a></li>
 					</ul>
