--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -72,6 +72,16 @@
 						<li><a href="{{ path('intrigue.list') }}">Intrigues</a></li>
 						<li><a href="{{ path('background.list') }}">Backgrounds</a></li>
 						<li><a href="{{ path('debriefing.list') }}">Debriefings</a></li>
+						<li><a href="{{ path('rumeur.list') }}">Rumeurs</a></li>
+						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
+					</ul>
+				</li>
+			{% endif %}
+			{# Menus reservé aux scénaristes #}
+			{% if is_granted('ROLE_SCENARISTE', app.user) %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Jeu<span class="caret"></span></a>
+					<ul class="dropdown-menu">
 						<li><a href="{{ path('trombinoscope') }}">Trombinoscope</a></li>
 						<li><a href="{{ path('trombinoscope.perso') }}">Selection</a></li>
 						<li><a href="{{ path('appelation') }}">Appelations</a></li>
@@ -80,7 +90,6 @@
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 						<li><a href="{{ path('ingredient.admin.list') }}">Ingredients</a></li>
 						<li><a href="{{ path('religion.level') }}">Fanatisme</a></li>
-						<li><a href="{{ path('chronologie') }}">Chronologie</a></li>
 						<li><a href="{{ path('groupe.diplomatie') }}">Diplomatie</a></li>
 						<li><a href="{{ path('document') }}">Documents</a></li>
 						<li><a href="{{ path('lieu') }}">Lieux</a></li>
