--- a/src/LarpManager/Views/forum/fragment/post_list.twig
+++ b/src/LarpManager/Views/forum/fragment/post_list.twig
@@ -2,44 +2,32 @@
 
 	{%  for post in posts %}
 	<li class="list-group-item">
-		<div class="row">
-			<div class="col-xs-1 col-md-1">
-				{# indique si l'utilisateur a déjà lu ce post #}
-				{% if app.user.alreadyView(post) %}
-					déjà vu
-					{% if app.user.newResponse(post) %}
-						Nouvelles réponses
-					{% endif %}
-					
+		
+		<h6 class="list-group-item-heading">
+			{# indique si l'utilisateur a déjà lu ce post #}
+			<span style="color: #000;">
+				{% if app.user.alreadyView(post) and not app.user.newResponse(post)%}
+					<i class="fa fa-star-o" aria-hidden="true"></i>
 				{% else %}
-					pas vu
+					<i class="fa fa-star" aria-hidden="true"></i>
 				{% endif %}
-				
-			</div>
-			<div class="col-xs-1 col-md-1">
-				<center>
-					<bold>{{ post.posts|length }}</bold><br />
-					réponses
-				</center>
-			</div>
-			<div class="col-xs-6 col-md-6">
-				<h6 class="list-group-item-heading">
-					<a href="{{ path('forum.post',{'index':post.id}) }}">{{ post.title }}</a>
-				</h6>
-				Sujet démarré {{ post.creationDate|time_diff }} 	par <a href="{{ path('user.view', {'id':post.user.id}) }}">{{ post.user.username }}</a>
-			</div>
-			<div class="col-xs-1 col-md-1">
-				{# nombre de sujets #}
-				{{ post.views }} Vues
-			</div>
-			<div class="col-xs-3 col-md-3">
-				{% set lastPost = post.posts|last %}
-				{% if lastPost %}
-					<a href="{{ path('forum.post',{'index':post.ancestor.id}) ~ '#post_' ~ lastPost.ancestor.id }}">Dernier message</a> par {{ lastPost.user.username }}<br />
-					{{ lastPost.creationDate|time_diff }}
-				{% endif %} 
-			</div>
-		</div>
+			</span>
+			<a href="{{ path('forum.post',{'index':post.id}) }}">{{ post.title }}</a>
+		</h6>
+		
+		par <a href="{{ path('user.view', {'id':post.user.id}) }}">{{ post.user.username }}</a>.
+		{# nombre de vues #}
+		<small>
+		<strong>{{ post.views }}</strong> Vues.
+		<strong>{{ post.posts|length }}</strong> réponses.
+		</small><br/> 
+		
+		{% set lastPost = post.posts|last %}
+		{% if lastPost %}
+			<a href="{{ path('forum.post',{'index':post.ancestor.id}) ~ '#post_' ~ lastPost.id }}">Dernier message</a> par {{ lastPost.user.username }}
+			{{ lastPost.creationDate|time_diff }}
+		{% endif %} 
+
 	</li>
 	{%  endfor %}
 </ul>
